[project]
name = "gemini"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yashikota", email = "52403688+yashikota@users.noreply.github.com" }
]
dependencies = [
    "GitPython==3.1.43",
    "Jinja2==3.1.4",
    "Markdown==3.6",
    "MarkupSafe==2.1.5",
    "Pillow==9.5.0",
    "PyYAML==6.0.1",
    "Pygments==2.18.0",
    "Werkzeug==3.0.3",
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "boto3==1.34.143",
    "botocore==1.34.143",
    "certifi==2024.6.2",
    "chardet==4.0.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "dnspython==2.6.1",
    "email_validator==2.2.0",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.4",
    "filelock==3.14.0",
    "fire==0.5.0",
    "fonttools==4.53.0",
    "fsspec==2024.6.0",
    "gitdb==4.0.11",
    "grpcio==1.64.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "huggingface-hub==0.23.4",
    "idna==3.7",
    "imageio==2.34.1",
    "imgsim==0.1.2",
    "intel-openmp==2021.4.0",
    "jmespath==1.0.1",
    "kiwisolver==1.4.5",
    "lama==0.1",
    "lazy_loader==0.4",
    "lpips==0.1.4",
    "markdown-it-py==3.0.0",
    "matplotlib==3.9.0",
    "mdurl==0.1.2",
    "mkl==2021.4.0",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "opencv-python-headless==4.10.0.84",
    "orjson==3.10.5",
    "packaging==24.1",
    "pandas==2.2.2",
    "protobuf==4.25.3",
    "psutil==6.0.0",
    "py-cpuinfo==9.0.0",
    "pybboxes==0.1.6",
    "pydantic==2.7.4",
    "pydantic_core==2.18.4",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "python-multipart==0.0.9",
    "pytz==2024.1",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.7.1",
    "roboflow==1.1.34",
    "s3transfer==0.10.2",
    "sahi==0.11.18",
    "scikit-image==0.23.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "shapely==2.0.4",
    "shellingham==1.5.4",
    "simple-lama-inpainting==0.1.2",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "sympy==1.12.1",
    "tbb==2021.12.0",
    "tensorboard==2.17.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==2.4.0",
    "terminaltables==3.1.10",
    "thop==0.1.1.post2209072238",
    "tifffile==2024.5.22",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "tqdm==4.66.4",
    "typer==0.12.3",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "ujson==5.10.0",
    "ultralytics==8.2.50",
    "ultralytics-thop==2.0.0",
    "urllib3==2.2.2",
    "uvicorn[standard]>=0.30.5",
    "watchfiles==0.22.0",
    "websockets==12.0",
    "yolov5==7.0.13",
    "yolov9==0.0.1",
    "black>=24.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemini"]
